--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "0x1C-binary_trees"]
 	path = 0x1C-binary_trees
 	url = https://github.com/alexaorrico/binary_trees.git
+[submodule "0x10-printf"]
+	path = 0x10-printf
+	url = https://github.com/alexaorrico/printf.git
+[submodule "0x15-simple_shell"]
+	path = 0x15-simple_shell
+	url = https://github.com/alexaorrico/simple_shell
